ajout balise meta analytics google

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     
 <!-- Analytics -->
- 
+
+<meta name="google-site-verification" content="XdEHG3Cj_gfF0FzGv6AvluWi9HPSYg6NDL7k_XlDXkY" />
+
 <!-- Analytics END -->
     
 </head>
