--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
 <meta name="google-site-verification" content="XdEHG3Cj_gfF0FzGv6AvluWi9HPSYg6NDL7k_XlDXkY" />
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172067965-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172067965-1');
+</script>
+
+
 <!-- Analytics END -->
     
 </head>
