--- a/page2.html
+++ b/page2.html
@@ -22,6 +22,17 @@
 
     
 <!-- Analytics -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172067965-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172067965-1');
+</script>
+
  
 <!-- Analytics END -->
     
