--- a/modify/index.html
+++ b/modify/index.html
@@ -36,7 +36,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo la chouette agence"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Banniere la chouette agence"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -117,7 +117,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<blockquote>
-					<p>La chouette agence est une excellente agence Web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</p>
+					<p>"La chouette agence est une excellente agence Web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 					<footer>Maxime Guilbard, PDG de A vos fourchettes</footer> 
 				</blockquote>
 			</div>
