--- a/modify/index.html
+++ b/modify/index.html
@@ -221,22 +221,22 @@
 				<nav class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="twitter" class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="twitter" class="social" href="http://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="facebook" class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="facebook" class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="dribbble" class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+							<a aria-label="dribbble" class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="instagram" class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+							<a aria-label="instagram" class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</nav>
