--- a/modify/index.html
+++ b/modify/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="La chouette agence, Entreprise de Webdesign sur Lyon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<link rel="canonical" href="https://kevinaudibert.github.io/La-chouette-agence/modify/index.html">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
