--- a/modify/contact.html
+++ b/modify/contact.html
@@ -136,28 +136,28 @@
 				<p class="text-center white">
 					La chouette agence - Agence web basée à Lyon.
 				</p>
-				<div class="row row-no-gutters social">
+				<nav class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="twitter" class="social" href="http://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="facebook" class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+							<a aria-label="dribbble" class="social" href="http://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+							<a aria-label="instagram" class="social" href="http://instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-				</div>
+				</nav>
 			</div>
 		</div>
 	</div>
