--- a/modify/contact.html
+++ b/modify/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La chouette agence est une agence de Web Design qui aide les entreprises à devenir attractives et visible sur Internet">
+    <meta name="description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonical" href="https://kevinaudibert.github.io/La-chouette-agence/modify/index.html">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -15,12 +15,12 @@
 <!-- Social Network Card -->
 
 	<meta property="og:title" content="La Chouette Agence">
-	<meta property="og:description" content="La chouette agence est une agence de Web Design qui aide les entreprises à devenir attractives et visible sur Internet">
+	<meta property="og:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
 	<meta property="og:image" content="img/picture-site">
 	<meta property="og:url" content="https://kevinaudibert.github.io/La-chouette-agence/modify">
 
 	<meta name="twitter:title" content="La Chouette Agence">
-	<meta name="twitter:description" content="La chouette agence est une agence de Web Design qui aide les entreprises à devenir attractives et visible sur Internet">
+	<meta name="twitter:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
 	<meta name="twitter:image" content="img/picture-site">
 	<meta name="twitter:card" content="La_Chouette_Agence">
     
