--- a/modify/index.html
+++ b/modify/index.html
@@ -231,12 +231,12 @@
 				<nav class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="twitter" class="social" href="http://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="twitter" class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a aria-label="facebook" class="social" href="http://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
+							<a aria-label="facebook" class="social" href="https://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
