--- a/modify/index.html
+++ b/modify/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<main class="page-container">
+<div class="page-container">
     
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
@@ -62,7 +62,7 @@
 	</div>
 </header>
 <!-- bloc-0 END -->
-
+<main>
 <!-- bloc-1-presentation -->
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
@@ -219,7 +219,7 @@
 	</div>
 </article>
 <!-- bloc-5-cta END -->
-
+</main>
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
@@ -256,7 +256,7 @@
 </footer>
 <!-- Footer - bloc-8 END -->
 
-</main>
+</div>
 <!-- Principal conteneur END -->
 </body>
 </html>
