--- a/modify/index.html
+++ b/modify/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonical" href="https://kevinaudibert.github.io/La-chouette-agence/modify/index.html">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -163,7 +163,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Couverture de livres" class="img-responsive portfolio-thumb"/></a>
+				<a href="#" data-lightbox="img/cover-book.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/cover-book.jpg" alt="Couverture de livres" class="img-responsive portfolio-thumb"/></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -172,7 +172,7 @@
 				</p>
 			</section>
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/2.png" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.png" class="img-responsive portfolio-thumb" alt="Prise de photographies"/></a>
+				<a href="#" data-lightbox="img/photographers.png" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographers.png" class="img-responsive portfolio-thumb" alt="Prise de photographies"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -183,7 +183,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/3.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.png" class="img-responsive portfolio-thumb" alt="matériel pour photographes"/></a>
+				<a href="#" data-lightbox="img/material-photo.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/material-photo.png" class="img-responsive portfolio-thumb" alt="matériel pour photographes"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -192,7 +192,7 @@
 				</p>
 			</section>
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/4.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.png" class="img-responsive portfolio-thumb" alt="plan de travail"/></a>
+				<a href="#" data-lightbox="img/board.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/board.png" class="img-responsive portfolio-thumb" alt="plan de travail"/></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
