--- a/modify/contact.html
+++ b/modify/contact.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<main class="page-container">
+<div class="page-container">
     
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
@@ -60,6 +60,8 @@
 	</div>
 </header>
 <!-- bloc-0 END -->
+
+<main>
 
 <!-- bloc-6 -->
 <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
@@ -123,6 +125,8 @@
 </section>
 <!-- bloc-7 END -->
 
+</main>
+
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
@@ -164,7 +168,7 @@
 </footer>
 <!-- Footer - bloc-8 END -->
 
-</main>
+</div>
 <!-- Principal conteneur END -->
     
 
